[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bump2v"
description = "This is a package to bump version numbers in a project. Fully automated versioning. Prefer to bump2version package instructions."
dependencies = ["bump2version==1.0.1"] # Dont touch this 
readme = "README.rst"
license = {file = "LICENSE"}
version = "1.1.7" # Update version here 👈🏻

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

keywords = [
    "alternative", "version", "versioning", "bump2version", "automate",
"python", "deployment", "devops", "dev", "ops", "automation", "bump", "versioning",
]

[project.urls]
Homepage = "https://github.com/maimul/bump2v"

[project.scripts]
bumptydumpty = "bump2v.__main__:main"
versionkaboom = "bump2v.__main__:main"
bump2v = "bump2v.__main__:main"

