[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bump2v"
description = "This is a package to bump version numbers in a project. Fully automated versioning. Refer to bump2version package instructions."
dependencies = []
readme = "README.rst"

[project.optional-dependencies]
test = ["pytest"]
license = {file = "LICENSE"}
version = "1.5.0" # Update version here 👈🏻

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

keywords = [
    "alternative", "version", "versioning", "bump2version", "automate",
"python", "deployment", "devops", "dev", "ops", "automation", "bump", "versioning",
]

[project.urls]
Homepage = "https://github.com/maimul/bump2v"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[project.scripts]
bumptydumpty = "bump2v.__main__:main"
versionkaboom = "bump2v.__main__:main"
bump2v = "bump2v.__main__:main"

