[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bump2v"
version = "1.6.0"
description = "This is a package to bump version numbers in a project. Fully automated versioning. Refer to bump2version package instructions."
readme = "README.rst"
license = {file = "LICENSE"}
dependencies = []

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

keywords = [
    "alternative", "version", "versioning", "bump2version", "automate",
    "python", "deployment", "devops", "dev", "ops", "automation", "bump", "versioning",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/maimul/bump2v"

[project.scripts]
bumptydumpty = "bump2v.__main__:main"
versionkaboom = "bump2v.__main__:main"
bump2v = "bump2v.__main__:main"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
